Update font and contact email in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>label INI — Launching Soon</title>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     :root{
       --accentA: #ff4e50;
@@ -86,7 +86,7 @@
     .coming{
       margin-top:50px;
       font-size: clamp(14px, 3vw, 22px);
-      color:#fff;
+      color:#333;
       text-transform:uppercase;
       letter-spacing:2px;
       font-weight:600;
@@ -109,6 +109,6 @@
   <h1 class="brand">INI</h1>
   <div class="brand-underline"></div>
   <div class="coming">launching soon</div>
-  <div class="contact">harshini@labelini.in</div>
+  <div class="contact">info@labelini.in</div>
 </body>
 </html>
